--- a/.github/workflows/gf.yml
+++ b/.github/workflows/gf.yml
@@ -171,6 +171,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: show disk space
+      run:  df -h
+
     - name: Start Apollo Containers
       run:  docker-compose -f ".github/workflows/apollo/docker-compose.yml" up -d --build
       
@@ -186,11 +189,16 @@ jobs:
     - name: Start Minikube
       uses: medyagh/setup-minikube@master
 
+    - name: show disk space
+      run:  df -h
+
     - name: Setup Golang ${{ matrix.go-version }}
       uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.go-version }}
         cache: false
+    - name: show disk space
+      run:  df -h
     - name: Cache Go Modules
       uses: actions/cache@v3
       with:
@@ -201,9 +209,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-${{ matrix.goarch }}-${{ matrix.go-version }}-
           ${{ runner.os }}-${{ matrix.goarch }}-
-
+    - name: show disk space
+      run:  df -h
     - name: Before Script
       run:  bash .github/workflows/before_script.sh
+
+    - name: show disk space
+      run:  df -h
 
     - name: Build & Test
       if: ${{ (github.event_name == 'push' && github.ref != 'refs/heads/master') || github.event_name == 'pull_request' }}
@@ -212,6 +224,8 @@ jobs:
     - name: Build & Test & Coverage
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
       run: bash .github/workflows/build_and_test.sh coverage
+    - name: show disk space
+      run:  df -h
 
     - name: Stop Redis Cluster Containers
       run:  docker-compose -f ".github/workflows/redis/docker-compose.yml" down
