--- a/.github/workflows/gf.yml
+++ b/.github/workflows/gf.yml
@@ -187,7 +187,7 @@ jobs:
         sudo mv /home/runner/go /mnt/go
         ln -s /mnt/go /home/runner/go
         ls -l /mnt
-        mkdir -p /mnt/.cache/go-build
+        mkdir -p /home/runner/.cache/go-build
         sudo mv /home/runner/.cache /mnt/.cache
         ln -s /mnt/.cache /home/runner/.cache
         ls -l /mnt
