--- a/.github/workflows/gf.yml
+++ b/.github/workflows/gf.yml
@@ -168,11 +168,18 @@ jobs:
       with:
         timezoneLinux: "Asia/Shanghai"
 
+    - name: show disk space
+      run:  df -h
+
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: show disk space
+      run:  df -h
+
     - name: Start Apollo Containers
       run:  docker-compose -f ".github/workflows/apollo/docker-compose.yml" up -d --build
+
     - name: show disk space
       run:  df -h
       
